2004-08-19 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: fixed segfault when modemtype is set to 'auto'
      or 'autodetect'. Fixed '+CPIN', some modem needs '"'.

2004-08-19 Alexander Malysh <amalysh at kannel.org>
    * gwlib/gw-prioqueue.[ch]: implemented very simple priority queue ala
      Robert Sedgewick. Behavior like kannel's list.
      Thanks to 'almado.de' for the idea.

2004-08-18  Stipe Tolj  <stolj@wapme.de>
    * gw/smsc/smsc_smpp.c: some typo fixes, no logic change.

2004-08-17  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * utils/mtbatch.1: added manpage for mtbatch
    * all: re-"released" 1.4.0 - moved branch tag

2004-08-17  Stipe Tolj  <stolj@wapme.de>
    * gw/shared.c: fix compiler warning for tcc.
    * wmlscript/ws.[ch]: fix const compiler warning for tcc.

2004-08-16 Andreas Fink <afink@global.networks.ch>
    * gwlib/semaphore.c: dont use native semaphores on MacOS X
      to avoid a "not implemented" error

2004-08-12 Alexander Malysh <olek2002 at hotmail.com>
    * gwlib/utils.c: fixed warning about format attributes.

2004-08-12 Alexander Malysh <olek2002 at hotmail.com>
    * gwlib/gwthread-pthread.c: declared 'tsd_key' and 'threadtable_lock' static,
      because those are local symbols and don't exported to the world.
    * gwlib/gwthread.h: added 'gw-config.h' and 'sys/poll.h' to includes, so we can
      include 'gwlib/gwthread.h' alone.

2004-08-11  Stipe Tolj  <stolj@wapme.de>
    * various files: a generic spellchecking patch to fix mis-spelling.
      Mainly this fixes bad-english comments in source files.
      Thanks a lot to Pedro for the provided patch. NO LOGIC CHANGE!
      [Msg-ID: <411A3291.4090906@netcabo.pt>]

2004-08-11  Stipe Tolj  <stolj@wapme.de>
    * gw/smsc/smpp_pdu.c: fixing a warning statement, for nulterminated string
      length checking of PDU elements. This should be not confusing users.
      Thanks to Alan McNatty for pointing to this.
